<resources>
    <string name="app_name">Calculator</string>
    <string name="time">Time</string>
    <string name="back">Back</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="area">Area</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="volume">Volume</string>
    <string name="mass">Mass</string>
    <string name="data">Data</string>
    <string name="speed">Speed</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="plusMinus">+/-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="c">C</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="rad">√</string>
    <string name="per">%</string>
    <string name="div">/</string>
    <string name="times">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
</resources>
